[package]
name = "ppm"
version = "0.1.0"
authors = ["PanQL <panqinglin00@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
log = "0.4.0"
env_logger = "0.6.1"
kdtree = "0.5.1"
lodepng = "2.4.2"
rgb = "0.8"
nalgebra = "0.18.0"
num-traits = "0.2.8"
